# game_ex

./: .gitignore  CMakeLists.txt  Dependency.cmake  LICENSE  README.md
Requirements/: plan.txt  ui_customize
gameobjects/: Box.cpp  Box.h  Box.vs  backpack.cpp  backpack.h  bone.vs  fragment.fs  gameobject.h  ground.cpp  lighting.fs  player.cpp  player.h  vertex.vs
gameobjects/backpack/: backpack.cpp  backpack.h
gameobjects/ground/: ground.cpp  ground.h
gameobjects/ground/groundModel/: floor.fbx
gameobjects/player/: player.cpp  player.h
gameobjects/player/playerModel/: Y_Bot.fbx
gameobjects/triggerwall/: triggerwall.cpp  triggerwall.h
gameobjects/wall/: wall.cpp  wall.h
render/: buffer.cpp  buffer.h  image.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
scene/: lobby_scene.cpp  lobby_scene.h  main_scene.cpp  main_scene.h  scene.h  scene_manager.cpp  scene_manager.h
src/: application.cpp  application.h  camera.cpp  camera.h  common.cpp  common.h  input.cpp  input.h  main.cpp  physics.cpp  physics.h  ui_customize.cpp  ui_customize.h
src/component/: animator_component.cpp  animator_component.h  backpack_component.cpp  backpack_component.h  component.h  linerenderer_component.cpp  linerenderer_component.h  physx_component.cpp  physx_component.h  player_component.cpp  player_component.h  renderer_component.cpp  renderer_component.h  transform_component.h  triggerwall_component.cpp  triggerwall_component.h
